--- a/less/global.less
+++ b/less/global.less
@@ -44,3 +44,7 @@ p {
 .btn {
     .btn();
 }
+
+section {
+    overflow: hidden;
+}
